# opentitan-provisioning

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  flake.nix  go.mod  go.sum  setup.sh
.github/workflows/: main.yml
config/: compiler.bzl  deploy.sh  device.bzl  execution.bzl  features.bzl  token_init.sh
config/dev/containers/: provapp.yml.tmpl
config/dev/env/: spm.env
config/prod/containers/: provapp.yml.tmpl
config/spm/: BUILD.bazel  sku_auth.yml.tmpl  sku_cr01.yml.tmpl  sku_pi01.yml.tmpl  sku_sival.yml.tmpl  sku_sival_mldsa.yml.tmpl  sku_sival_pqc.yml.tmpl  sku_ti01.yml.tmpl
config/spm/sku/: BUILD.bazel
config/spm/sku/sival_mldsa/: BUILD.bazel
docs/: deployment.md  spm.md
features/common/: BUILD.bazel
features/embedded/: BUILD.bazel
features/windows/: BUILD.bazel
nix/: README.md  ci-machine.nix
quality/: BUILD.bazel
release/: BUILD.bazel
rules/: hsm.bzl  pkg_win.bzl  quality.bzl  util.bzl  windows_binary.bzl
rules/scripts/: general_lint.template.sh  hsm_ca_sign.sh  hsmtool_runner.template.sh
src/ate/: BUILD.bazel  ate_api.h  ate_api_json_commands.cc  ate_api_json_commands_test.cc  ate_dll.cc  ate_perso_blob.cc  ate_perso_blob_test.cc  perso_blob.go  perso_blob_test.go
src/pa/: loadtest.go
src/pk11/: mldsa.go  mldsa_test.go
src/proto/: BUILD.bazel
src/proxy_buffer/: pb_server.go
src/transport/: BUILD.bazel
tests/: run_pa_loadtest.sh  run_pa_mldsa_loadtest.sh
toolchains/gcc_mxe_mingw32/: BUILD.bazel  README.md
util/: BUILD.bazel  generate_test_hpke_keys.go  integration_test_setup.sh
util/containers/: deploy_test_k8_pod.sh
util/containers/softhsm2/: Dockerfile
util/rr_parser/: rr_parser.go
(+23 files in other folders)
